--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="opaque_white">#80FFFFFF</color>
     <color name="blue_light_opaque">#03A9F4</color>
 
-
+    <color name="red">#FF1100</color>
 
     <color name="light_gray">#8FA7A7A7</color>
     <color name="transparent">#00FFFFFF</color>
