--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,8 +65,11 @@
                     android:src="@drawable/ic_check" />
 
 
-
             </LinearLayout>
+
+
+
+
 
 
         </LinearLayout>
@@ -82,6 +85,16 @@
 
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/button_loadFavs"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button_opaque_background"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
